--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 //INFO PARA LEVANTAR EL PROYECTO
-HOST=localhost
-PORT=3000
+HOST=host_donde_se_correra
+PORT=puerto
 
 //INFO DE BASE DE DATOS
 DB_NAME=nombre_base_de_datos
